--- a/appspec.yml
+++ b/appspec.yml
@@ -2,22 +2,22 @@ version: 0.0
 os: linux
 
 files:
-  - source: /index.html
-    destination: /var/www/html/
+# Path **inside** your repo/zip # Absolute path **on** the instance
+- source: index.html
+destination: /var/www/html/
 
 hooks:
-  ApplicationStop:
-    - location: scripts/stop_server
-      timeout: 300
-      runas: root
+ApplicationStop:
+- location: scripts/stop_server.sh
+timeout: 300
+runas: root
 
-  BeforeInstall:
-    - location: scripts/install_dependencies
-      timeout: 300
-      runas: root
+BeforeInstall:
+- location: scripts/install_dependencies.sh
+timeout: 300
+runas: root
 
-  ApplicationStart:
-    - location: scripts/start_server
-      timeout: 300
-      runas: root
-
+ApplicationStart:
+- location: scripts/start_server.sh
+timeout: 300
+runas: root
