--- a/appspec.yml
+++ b/appspec.yml
@@ -2,22 +2,21 @@ version: 0.0
 os: linux
 
 files:
-# Path **inside** your repo/zip # Absolute path **on** the instance
-- source: index.html
-destination: /var/www/html/
+  - source: index.html
+    destination: /var/www/html/index.html
 
 hooks:
-ApplicationStop:
-- location: scripts/stop_server.sh
-timeout: 300
-runas: root
+  ApplicationStop:
+    - location: scripts/stop_server.sh
+      timeout: 300
+      runas: root
 
-BeforeInstall:
-- location: scripts/install_dependencies.sh
-timeout: 300
-runas: root
+  BeforeInstall:
+    - location: scripts/install_dependencies.sh
+      timeout: 300
+      runas: root
 
-ApplicationStart:
-- location: scripts/start_server.sh
-timeout: 300
-runas: root
+  ApplicationStart:
+    - location: scripts/start_server.sh
+      timeout: 300
+      runas: root
